--- a/views/daily-ui/practice.jade
+++ b/views/daily-ui/practice.jade
@@ -1,83 +1,10 @@
 extends layout.jade
 block stylesheets
-  style.
-    .viewport {
-        perspective: 1000px;
-        width: 100px;
-        height: 100px;
-    }
-
-    .cube {
-        transform: rotateX(0deg);
-        transform-style: preserve-3d;
-    }
-
-    .cube div {
-        width: 100px;
-        height: 100px;
-        border: 1px solid #000;
-        opacity: .5;
-        position: absolute;
-        text-align: center;
-        line-height: 100px;
-    }
-
-    .cube .front {
-        transform: translateZ(50px);
-        background: red;
-    }
-
-    .cube .back {
-        transform: translateZ(-50px);
-        background: orange;
-    }
-
-    .cube .top {
-        transform: translateY(-50px) rotateX(90deg);
-        background: yellow;
-    }
-
-    .cube .bottom {
-        transform: translateY(50px) rotateX(90deg);
-        background: green;
-    }
-
-    .cube .left {
-        transform: translateX(-50px) rotateY(90deg);
-        background: cyan;
-    }
-
-    .cube .right {
-        transform: translateX(50px) rotateY(90deg);
-        background: blue;
-    }
-
-    .panel {
-        width: 200px;
-        height: 200px;
-        background-color: #000;
-        margin: 40px;
-        transition: .4s;
-    }
-
-    .panel:hover {
-        /*margin: 70px;*/
-        /*background-color: green;*/
-        transform: translate(30px, 30px);
-    }
-
-    .text {
-        width: 200px;
-        transform-origin: 0 50%;
-        transition: .4s;
-    }
-
-    .text:focus {
-        outline: none;
-        /*width: 300px;*/
-
-        transform: scale(1.5, 1);
-    }
+  link(rel='stylesheet' href='/stylesheets/daily-ui/practice.css')
+block javascripts
+  script(src='/bower_components/angular/angular.min.js')
+  script(src='/bower_components/jquery/dist/jquery.min.js')
+  script(src='/javascripts/daily-ui/practice.js')
 block body
   .viewport
     .cube
@@ -88,4 +15,4 @@ block body
       .left 5
       .right 6
   .panel
-  input(type='text')
+  button#show(data-slide) Show
