--- a/views/index.jade
+++ b/views/index.jade
@@ -4,9 +4,9 @@ html(lang='en' ng-app='gin')
     meta(charset='UTF-8')
     title GIN
     link(rel='stylesheet' href='/stylesheets/reset.css')
-    link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
+    link(rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet' href='/stylesheets/style.css')
-    script(src='/bower_components/angular/angular.min.js')
+    script(src='/angular/angular.min.js')
     script(src='/javascripts/gin.js')
   body(ng-controller='GinController')
     .banner-container
