done with restructure

--- a/daily-ui/20141214-register-with-success/20141214-register-with-success.jade
+++ b/daily-ui/20141214-register-with-success/20141214-register-with-success.jade
@@ -1,10 +1,10 @@
-extends layout.jade
-block stylesheets
-  link(rel='stylesheet' href='/stylesheets/daily-ui/20141214-register-with-success.css')
-block javascripts
-  script(src='/bower_components/jquery/dist/jquery.min.js')
-  script(src='/bower_components/jquery-ui/jquery-ui.min.js')
-  script(src='/javascripts/daily-ui/20141214-register-with-success.js')
+extends ../layout.jade
+block link
+  link(rel='stylesheet' href='/daily-ui/20141214-register-with-success.css')
+block script
+  script(src='/jquery/dist/jquery.min.js')
+  script(src='/jquery-ui/jquery-ui.min.js')
+  script(src='/daily-ui/20141214-register-with-success.js')
 block body
   .dialog
     .dialog-head
