--- a/daily-ui/20150303-timeline/20150303-timeline.jade
+++ b/daily-ui/20150303-timeline/20150303-timeline.jade
@@ -1,7 +1,7 @@
-extends layout.jade
-block stylesheets
-  link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
-  link(rel='stylesheet' href='/stylesheets/daily-ui/20150303-timeline.css')
+extends ../layout.jade
+block link
+  link(rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css')
+  link(rel='stylesheet' href='/daily-ui/20150303-timeline.css')
 block body
   ul.timeline
     li
